fix issue of page being off-center in mobile view (check commit 48 log)

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -46,6 +46,7 @@
 @media screen and (max-width: 1024px) {
     .experience_container {
         grid-template-columns: 1fr;
+        gap: 0rem;
     }
 
     .experience_container > div {
